# Slime

./: CMakeLists.txt  README.md
src/: agent.cu  agent.cuh  main.cu  trailmap.cu  trailmap.cuh
